reflectapi-demo/tests/errors/invalid_reflect_attributes.rs
#[derive(serde::Deserialize, reflectapi::Input)]
struct MyStruct {
    #[reflectapi(unknown_attributes)]
    field: u32,
}

fn main() {}
